--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+ <div>
+<h3>my first website</h3>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex odio incidunt nisi, commodi temporibus qui tenetur aut minus voluptates optio at earum enim, reprehenderit quis pariatur ea rem velit.</p>
+
+ </div>   
 </body>
 </html>
