added the second blog

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
  <div>
 <h3>my first website</h3>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex odio incidunt nisi, commodi temporibus qui tenetur aut minus voluptates optio at earum enim, reprehenderit quis pariatur ea rem velit.</p>
+ <div>
+<h3>my  second blog</h3>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex odio incidunt nisi, commodi temporibus qui tenetur aut minus voluptates optio at earum enim, reprehenderit quis pariatur ea rem velit.</p>
 
  </div>   
 </body>
