added a list to push code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <h3>my  second blog</h3>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex odio incidunt nisi, commodi temporibus qui tenetur aut minus voluptates optio at earum enim, reprehenderit quis pariatur ea rem velit.</p>
 
- </div>   
+ </div> 
+ <div>
+<h3> you to push normal</h3>
+<ul>
+<li>git add</li>
+<li>git commit -m"add a meaningful commit message"</li>
+<li>git push</li>
+</ul>
+
+ </div>  
 </body>
 </html>
