--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 <li>git commit -m"add a meaningful commit message"</li>
 <li>git push</li>
 </ul>
-
  </div>  
+ <div> <h3>my picture</h3>
+ <img src="IMG_1846[1].jpg" alt="">   
+
+
+</div>
 </body>
 </html>
